[gd_scene load_steps=12 format=2]

[ext_resource path="res://resources/TitleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://resources/GlowEnv.tres" type="Environment" id=2]
[ext_resource path="res://assets/font/Quantum.otf" type="DynamicFontData" id=3]
[ext_resource path="res://script/ui/mainMenu.gd" type="Script" id=4]
[ext_resource path="res://script/utilities/ui/SwoopControl.gd" type="Script" id=5]
[ext_resource path="res://assets/img/balls/ball.png" type="Texture" id=6]
[ext_resource path="res://assets/img/buttonOutline.png" type="Texture" id=7]
[ext_resource path="res://scenes/ui/IconSelectScreen.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Ball",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="Title" type="Label" parent="." groups=["swoop"]]
modulate = Color( 1, 1, 100, 1 )
anchor_right = 1.0
margin_bottom = 200.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "The Arena"
align = 1
valign = 1
script = ExtResource( 5 )

[node name="PlayButton" type="TextureButton" parent="." groups=["swoop"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.5
margin_top = -65.0
margin_right = 120.5
margin_bottom = 65.0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Outline" type="NinePatchRect" parent="PlayButton"]
modulate = Color( 1, 3.5, 100, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40

[node name="Text" type="Label" parent="PlayButton"]
modulate = Color( 1, 3.5, 100, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Play"
align = 1
valign = 1

[node name="ChangeIconButton" type="TextureButton" parent="." groups=["swoop"]]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 198.0
margin_top = -39.0
margin_right = 318.0
margin_bottom = 153.0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Indicator" type="AnimatedSprite" parent="ChangeIconButton"]
modulate = Color( 1, 3.5, 100, 1 )
position = Vector2( 59, 136 )
scale = Vector2( 0.667, 0.667 )
frames = SubResource( 4 )
animation = "Ball"

[node name="Text" type="Label" parent="ChangeIconButton"]
modulate = Color( 1, 1, 100, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
custom_constants/line_spacing = -5
custom_fonts/font = SubResource( 3 )
text = "Change
Ball"
align = 1

[node name="IconSelectScreen" parent="." instance=ExtResource( 8 )]
margin_top = 720.0
margin_bottom = 720.0

[connection signal="pressed" from="PlayButton" to="." method="startGame"]
[connection signal="pressed" from="ChangeIconButton" to="." method="loadChangeIconScreen"]
